--- a/css/_page.scss
+++ b/css/_page.scss
@@ -644,6 +644,14 @@
             padding-bottom: 13%;
             background: no-repeat center / cover;
             flex-shrink: 0;
+            @include rwd(800) {
+                width: 100%;
+                height: 0;
+                margin: auto;
+                padding-bottom: 60%;
+            }
+
+            
         }
         .fullList_msg {
             padding: 0 30px;
