--- a/css/_page.scss
+++ b/css/_page.scss
@@ -130,6 +130,8 @@
         position: relative;
         @include rwd(1250) {
             width: 100%;
+            height: auto;
+            padding: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -158,6 +160,8 @@
         position: relative;
         @include rwd(1250) {
             width: 100%;
+            height: auto;
+            padding: 10px 20px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -651,7 +655,7 @@
                 padding-bottom: 60%;
             }
 
-            
+
         }
         .fullList_msg {
             padding: 0 30px;
