--- a/css/all.css
+++ b/css/all.css
@@ -3701,6 +3701,8 @@ body {
 @media screen and (max-width: 1250px) {
   .betList th {
     width: 100%;
+    height: auto;
+    padding: 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -3747,6 +3749,8 @@ body {
 @media screen and (max-width: 1250px) {
   .betList td {
     width: 100%;
+    height: auto;
+    padding: 10px 20px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
