--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -5,7 +5,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
+    z-index: 991;
     align-items: center;
     display: flex;
     display: none;
@@ -36,7 +36,7 @@
         @include rwd(600) {
             padding: 50px 10px 30px;
         }
-
+ 
         .close {
             width: 38px;
             height: 38px;
@@ -140,6 +140,11 @@
                     text-align: left;
                 }
             }
+            
+            .innerList{
+                width: 100%;
+                height: 35px;
+            }
             .iptBox {
                 width: 100%;
                 max-width: 390px;
@@ -214,6 +219,7 @@
             }
         }
         .check_cnt {
+            margin-top: 50px;
             color: #626262;
             font-size: 1rem;
             letter-spacing: 1px;
@@ -242,17 +248,25 @@
                 background: url(../images/icon/icon-tick.png) no-repeat center / 90%;
             }
         }
-        .codeIpt {
-            width: 100%;
-            height: 35px;
-            display: flex;
+        .codeIpt{
+            width: 100%; 
+            height: 35px;    
+            &>div{
+                height: 100%;
+                display: flex;
+            }
         }
     }
     // 忘記密碼
     .forget {
         .btn {
-            max-width: 150px;
+            max-width: 200px;
             margin: 50px auto 0;
+            height: 45px;
+            line-height: 45px;
+            @include rwd(600){
+                max-width: 100%;
+            }
         }
     }
     // 註冊會員
@@ -271,6 +285,7 @@
                     margin-left: 0;
                 }
             }
+           
         }
         div.btn {
             height: 45px;
@@ -598,6 +613,12 @@
                 }
             }
         }
+    }
+    // 錯誤訊息
+    @at-root .errorTxt{
+        padding: 5px 0 0 5px;
+        color: rgb(241, 41, 41);
+        font-size: 0.9rem;
     }
 }
 
