--- a/css/all.css
+++ b/css/all.css
@@ -317,7 +317,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 999;
+  z-index: 991;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -512,6 +512,11 @@ img {
   }
 }
 
+.dialog_cnt_01 .innerBox .innerList {
+  width: 100%;
+  height: 35px;
+}
+
 .dialog_cnt_01 .innerBox .iptBox {
   width: 100%;
   max-width: 390px;
@@ -614,6 +619,7 @@ img {
 }
 
 .dialog_cnt_01 .check_cnt {
+  margin-top: 50px;
   color: #626262;
   font-size: 1rem;
   letter-spacing: 1px;
@@ -659,14 +665,26 @@ img {
 .dialog_cnt_01 .codeIpt {
   width: 100%;
   height: 35px;
+}
+
+.dialog_cnt_01 .codeIpt > div {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
 .dialogBox .forget .btn {
-  max-width: 150px;
+  max-width: 200px;
   margin: 50px auto 0;
+  height: 45px;
+  line-height: 45px;
+}
+
+@media screen and (max-width: 600px) {
+  .dialogBox .forget .btn {
+    max-width: 100%;
+  }
 }
 
 .dialogBox .regd .regd_btn {
@@ -1120,6 +1138,12 @@ img {
           transform: scale(1) translateY(2px);
 }
 
+.errorTxt {
+  padding: 5px 0 0 5px;
+  color: #f12929;
+  font-size: 0.9rem;
+}
+
 @-webkit-keyframes opacity {
   0%,
   100% {
@@ -1239,6 +1263,13 @@ body {
   transition: .3s;
 }
 
+.btn_linear_c1 button, .mbrSelect .btn.on button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .btn_linear_c1:active, .mbrSelect .btn.on:active {
   opacity: 1;
   -webkit-transform: translateY(2px);
@@ -1299,6 +1330,13 @@ body {
   opacity: 0;
   -webkit-transition: .3s;
   transition: .3s;
+}
+
+.btn_linear_c2 button, .mbrSelect .btn button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .btn_linear_c2:active, .mbrSelect .btn:active {
@@ -1363,6 +1401,13 @@ body {
   transition: .3s;
 }
 
+.btn_linear_c3 button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .btn_linear_c3:active {
   opacity: 1;
   -webkit-transform: translateY(2px);
@@ -1423,6 +1468,13 @@ body {
   opacity: 0;
   -webkit-transition: .3s;
   transition: .3s;
+}
+
+.btn_linear_c4 button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
 
 .btn_linear_c4:active {
@@ -1675,6 +1727,16 @@ body {
   border-radius: 50%;
 }
 
+.header .hd_top .hd_signIn .errorTxt {
+  display: none;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_signIn .errorTxt {
+    display: block;
+  }
+}
+
 .header .hd_top .hd_signIn .hd_signInCnt {
   display: none;
   -webkit-box-pack: end;
@@ -1925,7 +1987,7 @@ body {
 .header .hd_top .hd_signIn .signIn_account,
 .header .hd_top .hd_signIn .signIn_forget,
 .header .hd_top .hd_signIn .signIn_code {
-  margin: 15px 0;
+  margin: 5px 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1971,6 +2033,7 @@ body {
   .header .hd_top .hd_signIn .signIn_minTitle {
     width: 120px;
     padding-right: 5px;
+    padding-bottom: 20px;
     -ms-flex-negative: 0;
         flex-shrink: 0;
     text-align: right;
@@ -1989,6 +2052,20 @@ body {
   }
 }
 
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_signIn .signIn_account .signIn_iptBox {
+    width: 100%;
+    max-width: 390px;
+    height: 56px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header .hd_top .hd_signIn .signIn_account .signIn_iptBox {
+    max-width: 100%;
+  }
+}
+
 .header .hd_top .hd_signIn .signIn_account .signIn_minCnt {
   width: 155px;
   height: 34px;
@@ -2003,18 +2080,11 @@ body {
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .signIn_account .signIn_minCnt {
     width: 100%;
-    max-width: 390px;
     height: 35px;
     background-color: #100f1f;
     -webkit-box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
             box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
     border: none;
-  }
-}
-
-@media screen and (max-width: 1280px) and (max-width: 600px) {
-  .header .hd_top .hd_signIn .signIn_account .signIn_minCnt {
-    max-width: 100%;
   }
 }
 
@@ -2034,6 +2104,20 @@ body {
   }
 }
 
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_signIn .signIn_forget .signIn_iptBox {
+    width: 100%;
+    max-width: 390px;
+    height: 56px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .header .hd_top .hd_signIn .signIn_forget .signIn_iptBox {
+    max-width: 100%;
+  }
+}
+
 .header .hd_top .hd_signIn .signIn_forget .signIn_minCnt {
   width: 155px;
   height: 34px;
@@ -2048,7 +2132,6 @@ body {
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .signIn_forget .signIn_minCnt {
     width: 100%;
-    max-width: 390px;
     height: 35px;
     background-color: #100f1f;
     -webkit-box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
@@ -2133,6 +2216,13 @@ body {
   transition: .3s;
 }
 
+.header .hd_top .hd_signIn .signIn_forget .hd_forget button {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
 .header .hd_top .hd_signIn .signIn_forget .hd_forget:active {
   opacity: 1;
   -webkit-transform: translateY(2px);
@@ -2149,6 +2239,24 @@ body {
   background: url(../images/icon/icon-Q.png) no-repeat center;
 }
 
+.header .hd_top .hd_signIn .signIn_code .signIn_codeBox {
+  width: 100%;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_top .hd_signIn .signIn_code .signIn_codeBox {
+    width: 100%;
+    height: 56px;
+    max-width: 390px;
+  }
+}
+
+@media screen and (max-width: 1280px) and (max-width: 600px) {
+  .header .hd_top .hd_signIn .signIn_code .signIn_codeBox {
+    max-width: 100%;
+  }
+}
+
 .header .hd_top .hd_signIn .signIn_code .signIn_minCnt {
   height: 34px;
 }
@@ -2156,14 +2264,7 @@ body {
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .signIn_code .signIn_minCnt {
     width: 100%;
-    max-width: 390px;
     height: 35px;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .header .hd_top .hd_signIn .signIn_code .signIn_minCnt {
-    max-width: 100%;
   }
 }
 
@@ -2935,36 +3036,6 @@ body {
           transform: rotate(-45deg);
 }
 
-.onloading {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 999;
-  position: fixed;
-  top: 0;
-  left: 0;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: none;
-}
-
-.onloading.on {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.onloading > div {
-  width: 100px;
-  height: 100px;
-  background-color: #fff;
-  border-radius: 50%;
-}
-
 @-webkit-keyframes pudding {
   0% {
     -webkit-transform: scaleX(1);
@@ -3042,7 +3113,7 @@ body {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 50;
+  z-index: 999;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
