--- a/css/all.css
+++ b/css/all.css
@@ -189,8 +189,8 @@ img {
   background-color: rgba(255, 255, 255, 0);
   border-radius: 50%;
   text-decoration: none;
-  -webkit-transition: all .2s ease-out;
-  transition: all .2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -211,7 +211,7 @@ img {
 }
 
 .sw-prev::after {
-  content: '<';
+  content: "<";
 }
 
 .sw-next {
@@ -219,7 +219,7 @@ img {
 }
 
 .sw-next::after {
-  content: '>';
+  content: ">";
 }
 
 .sw-bullet {
@@ -240,8 +240,8 @@ img {
   border-radius: 50%;
   display: inline-block;
   cursor: pointer;
-  -webkit-transition: all .2s ease-out;
-  transition: all .2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 .sw-bullet li:hover {
@@ -273,8 +273,52 @@ img {
 
 @media screen and (max-width: 1050px) {
   .mainCarousel {
+    padding-bottom: calc(55%);
     margin-bottom: 20px;
   }
+}
+
+.mainCarousel .sw-slide {
+  width: 100%;
+  height: 100%;
+}
+
+.mainCarousel a {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  position: relative;
+}
+
+.mainCarousel .title {
+  width: 100%;
+  padding: 15px;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: #fff;
+  font-size: 1.6rem;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+@media screen and (max-width: 950px) {
+  .mainCarousel .title {
+    padding: 10px;
+    font-size: 1.1rem;
+  }
+}
+
+.mainCarousel .title span {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  white-space: normal;
 }
 
 .mainCarousel .sw-bullet {
@@ -778,7 +822,7 @@ img {
 
 @media screen and (max-width: 710px) and (any-hover: hover) {
   .dialogBox .newGift .close:hover {
-    border: 1px solid #F8A959;
+    border: 1px solid #f8a959;
   }
 }
 
@@ -814,12 +858,12 @@ img {
 }
 
 .dialogBox .newGift .close:active::before, .dialogBox .newGift .close:active::after {
-  background-color: #F8A959;
+  background-color: #f8a959;
 }
 
 @media (any-hover: hover) {
   .dialogBox .newGift .close:hover::before, .dialogBox .newGift .close:hover::after {
-    background-color: #F8A959;
+    background-color: #f8a959;
   }
 }
 
@@ -1206,6 +1250,119 @@ img {
   100% {
     opacity: 1;
   }
+}
+
+.loading {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.loading.on {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.loading::before {
+  content: "loading...";
+  margin: auto;
+  color: #fff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  font-size: 1.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  opacity: 0.5;
+  -webkit-animation: load_txt 2s linear infinite;
+          animation: load_txt 2s linear infinite;
+}
+
+.loading .load_round {
+  -webkit-animation: load_round 1s linear infinite;
+          animation: load_round 1s linear infinite;
+  width: 160px;
+  height: 160px;
+  top: 20px;
+  left: 20px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 4px 0 0 #fff;
+          box-shadow: 0 4px 0 0 #fff;
+  -webkit-transform-origin: 80px 82px;
+          transform-origin: 80px 82px;
+}
+
+.warnLog {
+  width: 100vw;
+  height: 100vh;
+  padding: 10px;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 20;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+.warnLog .warnbody {
+  width: 100%;
+  max-width: 350px;
+  padding: 30px 10px;
+  background: -webkit-gradient(linear, left bottom, left top, from(#091422), to(#0e263c));
+  background: linear-gradient(0deg, #091422, #0e263c);
+  -webkit-box-shadow: 5px 5px 10px #000;
+          box-shadow: 5px 5px 10px #000;
+  border: 1px solid #f6bf3d;
+  -o-border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
+     border-image: -webkit-gradient(linear, left bottom, left top, from(#f6bf3d), color-stop(#7a5d17), to(#f6bf3d)) 1 1 round;
+     border-image: linear-gradient(0deg, #f6bf3d, #7a5d17, #f6bf3d) 1 1 round;
+}
+
+.warnLog .warnIcon {
+  width: 85px;
+  margin: 0 auto 40px;
+}
+
+.warnLog .warnTxt {
+  color: #fff;
+  text-align: center;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
+  font-weight: bold;
 }
 
 body {
@@ -1662,18 +1819,6 @@ body {
   }
 }
 
-.header .hd_top .hd_signIn[data-signIn="0"] .hd_signInCnt[data-signIn="0"] {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.header .hd_top .hd_signIn[data-signIn="1"] .hd_signInCnt[data-signIn="1"] {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
 @media screen and (max-width: 1280px) {
   .header .hd_top .hd_signIn .close {
     width: 100%;
@@ -1738,7 +1883,9 @@ body {
 }
 
 .header .hd_top .hd_signIn .hd_signInCnt {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -2280,6 +2427,7 @@ body {
 }
 
 .header .hd_top .hd_signIn .signIn_code .nbCode {
+  width: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2288,6 +2436,9 @@ body {
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
+  overflow: hidden;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .header .hd_top .hd_signIn .signIn_btn {
@@ -2355,14 +2506,13 @@ body {
   background: linear-gradient(90deg, transparent 10%, #000, transparent 90%);
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1280px) {
   .header .hd_menu {
     width: 100vw;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.8);
     z-index: 20;
     -webkit-transform: translateX(-100%);
             transform: translateX(-100%);
@@ -2380,6 +2530,13 @@ body {
   position: fixed;
   top: 0;
   z-index: 20;
+}
+
+@media screen and (max-width: 1280px) {
+  .header .hd_menu .close {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .header .hd_menu ul {
@@ -2401,16 +2558,18 @@ body {
       justify-content: space-around;
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1280px) {
   .header .hd_menu ul {
-    width: 85%;
-    max-width: 300px;
+    width: 80%;
     min-width: 250px;
     margin: unset;
     padding: 20px;
     background: #0b2139 url(../images/bodyBg.jpg) no-repeat;
     display: block;
     border-right: 1px solid #ebba48;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
 
@@ -2428,7 +2587,7 @@ body {
   transition: 0.3s;
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1280px) {
   .header .hd_menu li {
     width: 100%;
     height: unset;
@@ -3104,72 +3263,6 @@ body {
     -webkit-transform: scaleX(1);
             transform: scaleX(1);
   }
-}
-
-.loading {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 999;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  display: none;
-}
-
-.loading.on {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.loading::before {
-  content: "loading...";
-  margin: auto;
-  color: #fff;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  font-size: 1.4rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  opacity: 0.5;
-  -webkit-animation: load_txt 2s linear infinite;
-          animation: load_txt 2s linear infinite;
-}
-
-.loading .load_round {
-  -webkit-animation: load_round 1s linear infinite;
-          animation: load_round 1s linear infinite;
-  width: 160px;
-  height: 160px;
-  top: 20px;
-  left: 20px;
-  border-radius: 50%;
-  -webkit-box-shadow: 0 4px 0 0 #fff;
-          box-shadow: 0 4px 0 0 #fff;
-  -webkit-transform-origin: 80px 82px;
-          transform-origin: 80px 82px;
 }
 
 @-webkit-keyframes load_txt {
@@ -4779,6 +4872,10 @@ body {
   }
 }
 
+.newsCnt_main .newstitle {
+  margin-bottom: 30px;
+}
+
 .newsCnt_main .newstitle .txt {
   font-size: 2rem;
   line-height: 2.5rem;
@@ -4800,6 +4897,7 @@ body {
   height: 2rem;
   padding: 3px 5px;
   font-size: 1.6rem;
+  margin-right: 5px;
   background-color: #ea0000;
   color: #fff;
   display: inline;
@@ -4822,6 +4920,16 @@ body {
   border-bottom: 1px solid #c5c5c5;
 }
 
+.newsCnt_main .newsArticle {
+  line-height: 25px;
+}
+
+.newsCnt_main .newsArticle .size-full {
+  height: auto !important;
+  margin: 20px 0;
+}
+
+.newsCnt_main .newsArticle .adbro-autotester-satellite,
 .newsCnt_main .newsArticle #adbro {
   display: none !important;
 }
@@ -7110,5 +7218,53 @@ body {
 
 .mbrbtn .btn + .btn {
   margin-left: 10px;
+}
+
+.qrBody {
+  width: 100vw;
+  height: 100vh;
+  padding: 0 20px;
+  background: url(../images/qrBgi.jpg) no-repeat center/cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.qrCnt {
+  width: 100%;
+  max-width: 350px;
+  color: #0164f3;
+}
+
+.qrTitle {
+  text-align: center;
+  font-size: 0.8rem;
+}
+
+.qrTitle span {
+  font-size: 2.5rem;
+  font-weight: bold;
+  display: block;
+  padding-bottom: 3px;
+}
+
+.qrImg {
+  width: 100%;
+  max-width: 300px;
+  margin: 15px auto;
+  -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+          box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+}
+
+.qrAccount {
+  color: #313131;
+  font-size: 1.1rem;
+  text-align: center;
 }
 /*# sourceMappingURL=all.css.map */
