--- a/css/_main.scss
+++ b/css/_main.scss
@@ -75,6 +75,9 @@ body {
         }
         .hd_link {
             margin-bottom: 12px;
+            a{
+                display: flex;
+            }
             ul {
                 width: 100%;
                 display: flex;
