--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -727,6 +727,7 @@
         color: #fff;
         text-align: center;
         font-size: 1.2rem;
+        line-height: 1.6rem;
         letter-spacing: 1px;
         font-weight: bold;
     }
