--- a/css/_member.scss
+++ b/css/_member.scss
@@ -32,7 +32,7 @@
     }
     @at-root .mbrMsg{
         max-width: 1000px;
-        padding-bottom: 80px;
+        padding-bottom: 50px;
         margin: auto;
         font-size: 1.2rem;
         ul{
@@ -57,9 +57,12 @@
             font-weight: bold;
             @include rwd(800){
                 width: 100%;
-                margin-bottom: 5px;
-                padding: 5px;
-                background-color: #e5e5e5;
+                margin-bottom: 10px;
+                padding: 10px;
+                color: #999;
+                background-color: #e5e5e5;   
+                border-radius: 4px;
+                text-shadow: 1px 1px 2px #fff;
             }
         }
         @at-root .mbrl_content{
@@ -76,8 +79,10 @@
             height: 40px;
             border: 1px solid #cfcfcf;
             border-radius: 5px;
-
             box-shadow: 2px 2px 4px rgb(192, 192, 192) inset;
+            @include rwd(800){
+                box-shadow: unset;
+            }
             input{
                 width: 100%;
                 height: 100%;
@@ -116,6 +121,9 @@
                 cursor: pointer;
                 position: absolute;
                 @include pos(tbr,0,0,10px);
+            }
+            @include rwd(800){
+                text-align: center;
             }
         }
 
